--- a/app/src/main/res/layout/eboxlistview_item.xml
+++ b/app/src/main/res/layout/eboxlistview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/cmdarea"
     android:padding="10dp">
 
@@ -9,6 +9,7 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:id="@+id/imageView1"
+        android:src="@drawable/ic_launcher_background"
         android:layout_weight="1" />
 
     <LinearLayout
@@ -20,7 +21,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            android:text="약 이름"
             android:id="@+id/textView1"
             android:textSize="24sp"
             android:textColor="#000000"
@@ -30,7 +31,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            android:text="증상"
             android:id="@+id/textView2"
             android:textSize="16sp"
             android:textColor="#666666"
