--- a/app/src/main/res/layout/fragment_plist.xml
+++ b/app/src/main/res/layout/fragment_plist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,21 +10,18 @@
         android:id="@+id/lvPlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#b5d692"
-        app:backgroundTint="#b5d692"
-        android:clickable="true"
+    <Button
         android:id="@+id/fabAdd"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/add"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="+"
+        android:textSize="30dp"
+        android:background="@drawable/circle"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10dp"/>
 
 
 
-</RelativeLayout>
+</FrameLayout>
 
