--- a/app/src/main/res/layout/eboxlistview_item.xml
+++ b/app/src/main/res/layout/eboxlistview_item.xml
@@ -6,6 +6,8 @@
     android:padding="10dp">
 
     <ImageView
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:id="@+id/imageView1"
