--- a/app/src/main/res/layout/listview_plist.xml
+++ b/app/src/main/res/layout/listview_plist.xml
@@ -15,6 +15,7 @@
         android:layout_height="125dp"
         android:src="@drawable/ic_launcher_background"/>
     <LinearLayout
+        android:layout_marginTop="24dp"
         android:orientation="vertical"
         android:padding="6dp"
         android:layout_weight="4"
