--- a/app/src/main/res/layout/activity_search_pill.xml
+++ b/app/src/main/res/layout/activity_search_pill.xml
@@ -35,7 +35,7 @@
         <Button
             android:id="@+id/buttonNameSearch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="검색"
