--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,7 +20,17 @@
         android:id="@+id/search_drugstore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:text="   약국 정보   "
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:padding="20dp"
+        android:background="@drawable/background"/>
+    <TextView
+        android:id="@+id/search_recompill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="   증상 검색   "
         android:textSize="20dp"
         android:textColor="@color/black"
         android:padding="20dp"
